[gd_scene load_steps=17 format=2]

[ext_resource path="res://Tanks/Abrams/Abrams.gd" type="Script" id=1]
[ext_resource path="res://Tanks/BaseTank/PlayerNameText.tscn" type="PackedScene" id=2]
[ext_resource path="res://Tanks/Abrams/Animations/Smoke.png" type="Texture" id=3]
[ext_resource path="res://Tanks/Abrams/Animations/36968089_626587324407138_4135589473486372864_n.png" type="Texture" id=4]
[ext_resource path="res://Tanks/Abrams/Animations/Abrams_Shooting.png" type="Texture" id=5]
[ext_resource path="res://Tanks/Abrams/Sounds/move.wav" type="AudioStream" id=6]
[ext_resource path="res://Tanks/Abrams/Sounds/fire.wav" type="AudioStream" id=7]
[ext_resource path="res://Tanks/Abrams/Sounds/reload.wav" type="AudioStream" id=8]
[ext_resource path="res://Tanks/Abrams/Sounds/M1_explode.wav" type="AudioStream" id=9]

[sub_resource type="Gradient" id=1]

offsets = PoolRealArray( 0, 0.58156, 1 )
colors = PoolColorArray( 0, 0, 0, 0.801098, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]

flags = 4
gradient = SubResource( 1 )
width = 2048

[sub_resource type="ParticlesMaterial" id=3]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 90.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
initial_velocity_random = 0.5
angular_velocity = 20.0
angular_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 0.02
scale_random = 0.0
color_ramp = SubResource( 2 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angular Velocity", "Color", "Initial Velocity", "Scale", "Spread" ]

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "Shooting",
"speed": 6.0
} ]

[sub_resource type="Gradient" id=5]

offsets = PoolRealArray( 0, 0.556738, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 0.984375, 0.520666, 0.111511, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=6]

flags = 4
gradient = SubResource( 5 )
width = 2048

[sub_resource type="ParticlesMaterial" id=7]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 1.0
angular_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 0.05
scale_random = 0.0
color_ramp = SubResource( 6 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Angular Velocity", "Color", "Gravity", "Initial Velocity", "Linear Accel", "Scale", "Spread" ]

[node name="Abrams" type="KinematicBody2D"]

position = Vector2( 378.454, 217.021 )
z_index = -1
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]
UP = 16777232
DOWN = 16777234
LEFT = 16777231
RIGHT = 16777233
SHOOT = 77
rotation_speed = 5
movement_speed = 130
go_back_speed_multiplier = 0.5
health = 5
is_controlled_by_mobile = false
AI = false
seconds_between_path_updates = 1
stop_at_distance = 100
clear_path_points_at = 30
minimum_shoot_cooldown = 0.5
field_of_detection = 10000
player_name_label = ExtResource( 2 )
label_position = Vector2( 0, 25 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="0"]

position = Vector2( 0, -5.41101 )
build_mode = 0
polygon = PoolVector2Array( -2.08594, -12.0306, 1.12598, -12.0306, 1.31492, -4.66211, 4.24343, -4.28423, 4.43237, -5.41785, 7.26641, -5.41785, 7.26641, 18.1992, -8.32083, 18.2936, -8.32083, -5.13445, -5.86466, -5.22892, -5.86466, -4.00083, -2.55828, -4.28423 )

[node name="ShootPosition" type="Position2D" parent="." index="1"]

position = Vector2( -0.5, -19.5696 )
scale = Vector2( 0.985646, 0.771165 )
_sections_unfolded = [ "Transform" ]

[node name="Description" type="RichTextLabel" parent="." index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "The M1 Abrams, shooting HEAT projectiles."
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false

[node name="Trail" type="Particles2D" parent="." index="3"]

position = Vector2( -1.79242, 11.4715 )
rotation = 1.57119
emitting = false
amount = 50
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 2.0
explosiveness = 0.01
randomness = 1.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 3 )
texture = ExtResource( 3 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Z Index" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="4"]

position = Vector2( 0, 3.59831 )
frames = SubResource( 4 )
animation = "Shooting"
offset = Vector2( 0, -5 )

[node name="Explosion" type="Particles2D" parent="." index="5"]

emitting = false
amount = 300
lifetime = 1.0
one_shot = true
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.7
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 7 )
texture = ExtResource( 3 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time" ]

[node name="Sprite" type="Sprite" parent="." index="6"]

visible = false
position = Vector2( 0, -4.66029 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Visibility" ]

[node name="Sounds" type="Node" parent="." index="7"]

[node name="Move" type="AudioStreamPlayer2D" parent="Sounds" index="0"]

position = Vector2( 378.454, 217.021 )
stream = ExtResource( 6 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Fire" type="AudioStreamPlayer2D" parent="Sounds" index="1"]

position = Vector2( 378.454, 217.021 )
stream = ExtResource( 7 )
volume_db = -5.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Reload" type="AudioStreamPlayer2D" parent="Sounds" index="2"]

position = Vector2( 378.454, 217.021 )
stream = ExtResource( 8 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Explode" type="AudioStreamPlayer2D" parent="Sounds" index="3"]

stream = ExtResource( 9 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="RayCast2D" type="RayCast2D" parent="." index="8"]

enabled = false
exclude_parent = true
cast_to = Vector2( 0, -200 )
collision_mask = 1

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]

[connection signal="finished" from="Sounds/Fire" to="." method="_on_Fire_Sound_finished"]

[connection signal="finished" from="Sounds/Reload" to="." method="_on_Reload_Sound_finished"]


